2002-10-18  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:] (ClientMessage:TAKE_FOCUS)):
	Only send event if we don't have a key window.

2002-10-15 01:37  Alexander Malmberg  <alexander@malmberg.org>

	* Tools/GNUmakefile: Use BUILD_SERVER to decide whether to build
	X specific parts of gpbs or not.

2002-10-13  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.2.
	* Documentation/news.texi: Update.

Fri Oct 11 00:47:04 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/xlib/XGFont.m ([XGFontInfo -setupAttributes]): Return NO
	if the font can't be loaded.  (Patch by Georg Fleischmann
	<georg@vhf.de>).

2002-10-10  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile.postamble: Only install back.make if building
	as a library.

2002-10-10  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGGState.m
	DPSsetdash::: now accepts an empty dash pattern, signaling a reset
	to a solid line.

2002-10-08  Adam Fedor  <fedor@gnu.org>

	* Update for front-end passing colorspaces and fonts
	in overridable way.
	* Headers/gsc/GSGStateOps.h: Update changed methods.
	* Source/art/ARTContext.m: Font ivar is now a GSFontInfo
	class, so use 'font' instead of '[font fontInfo]'.
	* Source/gsc/GSContext.m (-GSSetFont): Idem.
	(-GSSetFillColorspace:): Implement.
	(-GSSetStrokeColorspace:): Idem.
	(-GSSetFillColor:): Idem.
	(-GSSetStrokeColor:): Idem.
	* Source/gsc/GSGState.m: Update font ivar handling.
	* Source/gsc/GSStreamContext.m: Idem.
	* Source/winlib/WIN32GState.m: Idem.
	* Source/xlib/XGGState.m: Idem.

	* Window focus fixes
	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:](ClientMessage/TAKE_FOCUS)):
	Use given window as focus window, not one under mouse.
	* Source/x11/XGServerWindow.m ([XGServer -setinputfocus:]): Don't
	reset focus if we already requested it on this window.
	
2002-09-28 22:04  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Add .font package handling again.
