@@ -1,3 +1,12 @@
+2002-10-19  Adam Fedor  <fedor@gnu.org>
+
+	* Source/x11/XGServerEvent.m ([XGServer
+	-receivedEvent:type:extra:forMode:] (ClientMessage:TAKE_FOCUS)):
+	Don't set desiredFocusWindow to 0.
+	([XGServer
+	-receivedEvent:type:extra:forMode:] (FocusOut): Hack: if focus
+	went nowhere, don't deactivate app.
+
 2002-10-18  Adam Fedor  <fedor@gnu.org>
 
 	* Source/x11/XGServerEvent.m ([XGServer
